# neighbours

./: .pre-commit-config.yaml  Cargo.toml  README.md  dprint.json
.github/workflows/: dependency-review.yml  general.yml  scorecard.yml
fixtures/: invalid.json  valid_points.json
src/: main.rs
src/domain/: mod.rs  point.rs
src/utilities/: error.rs
