[package]
name = "neighbours"
version = "0.1.0"
authors = ["Rodney Johnson <ask@rodneylab.com>"]
edition = "2024"
license = "BSD-3-Clause"
repository = "https://github.com/rodneylab/neighbours"
rust-version = "1.85.0"
description = "Function to determine neighbours of a point within a direction and distance range"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
